--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,13 @@
         android:layout_alignParentEnd="true"
         android:textColor="#000000" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear"
+        android:id="@+id/button_clear"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/button_debug"
+        android:layout_toStartOf="@+id/button_debug" />
+
 </RelativeLayout>
